fixed overflow issue in resources page. Modified js gallery function

--- a/css/donations.css
+++ b/css/donations.css
@@ -46,7 +46,7 @@
 
   #donationTopButton{
     margin-bottom: 0;
-    margin-top: 40px;
+    margin-top: 30px;
   }
 
   
